gccida/c1/output_constructor
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5158:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5161:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5168:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5173:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5183:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *size_unit; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5208:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // [rsp+20h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5209:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *t; // [rsp+30h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5268:20: error: expected expression
v15 = ( tree_node *)v14; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5268:9: error: use of undeclared identifier 'tree_node'
v15 = ( tree_node *)v14; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5463:23: error: expected expression
values = ( tree_node *)*p_chain; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/varasm.c:5463:12: error: use of undeclared identifier 'tree_node'
values = ( tree_node *)*p_chain; 
           ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constructor/src/obj/varasm.o] Error 1
